--- a/src/Views/About.axaml
+++ b/src/Views/About.axaml
@@ -63,7 +63,7 @@
           </Button>
 
           <Button Width="18" Height="18" Margin="8,0,0,0" Classes="icon_button" Click="OnVisitSourceCode" ToolTip.Tip="https://github.com/sourcegit-scm/sourcegit">
-            <Path Width="16" Height="16" Data="{StaticResource Icons.Github}"/>
+            <Path Width="16" Height="16" Data="{StaticResource Icons.GitHub}"/>
           </Button>
         </StackPanel>
 
