--- a/src/Resources/Locales/ja_JP.axaml
+++ b/src/Resources/Locales/ja_JP.axaml
@@ -257,7 +257,6 @@
   <x:String x:Key="Text.Diff.VisualLines.Decr" xml:space="preserve">表示する行数を減らす</x:String>
   <x:String x:Key="Text.Diff.VisualLines.Incr" xml:space="preserve">表示する行数を増やす</x:String>
   <x:String x:Key="Text.Diff.Welcome" xml:space="preserve">ファイルを選択すると、変更内容が表示されます</x:String>
-  <x:String x:Key="Text.DiffWithMerger" xml:space="preserve">マージツールで開く</x:String>
   <x:String x:Key="Text.Discard" xml:space="preserve">変更を破棄</x:String>
   <x:String x:Key="Text.Discard.All" xml:space="preserve">ワーキングディレクトリのすべての変更を破棄</x:String>
   <x:String x:Key="Text.Discard.Changes" xml:space="preserve">変更:</x:String>
@@ -279,7 +278,6 @@
   <x:String x:Key="Text.FileCM.Discard" xml:space="preserve">破棄...</x:String>
   <x:String x:Key="Text.FileCM.DiscardMulti" xml:space="preserve">{0}個のファイルを破棄...</x:String>
   <x:String x:Key="Text.FileCM.DiscardSelectedLines" xml:space="preserve">選択された行の変更を破棄</x:String>
-  <x:String x:Key="Text.FileCM.OpenWithExternalMerger" xml:space="preserve">外部マージツールで開く</x:String>
   <x:String x:Key="Text.FileCM.ResolveUsing" xml:space="preserve">${0}$ を使用して解決</x:String>
   <x:String x:Key="Text.FileCM.SaveAsPatch" xml:space="preserve">パッチとして保存...</x:String>
   <x:String x:Key="Text.FileCM.Stage" xml:space="preserve">ステージ</x:String>
@@ -417,6 +415,7 @@
   <x:String x:Key="Text.Name" xml:space="preserve">名前:</x:String>
   <x:String x:Key="Text.NotConfigured" xml:space="preserve">Gitが設定されていません。まず[設定]に移動して設定を行ってください。</x:String>
   <x:String x:Key="Text.OpenAppDataDir" xml:space="preserve">アプリケーションデータのディレクトリを開く</x:String>
+  <x:String x:Key="Text.OpenInExternalMergeTool" xml:space="preserve">マージツールで開く</x:String>
   <x:String x:Key="Text.OpenWith" xml:space="preserve">外部ツールで開く...</x:String>
   <x:String x:Key="Text.Optional" xml:space="preserve">任意。</x:String>
   <x:String x:Key="Text.PageTabBar.New" xml:space="preserve">新しいページを開く</x:String>
