--- a/src/Views/SubmodulesView.axaml
+++ b/src/Views/SubmodulesView.axaml
@@ -155,7 +155,7 @@
                     <StackPanel Grid.Row="0" Grid.Column="1"
                                 Orientation="Horizontal"
                                 Margin="8,0,0,0">
-                      <Path Width="14" Height="14" Data="{StaticResource Icons.Branch}"/>
+                      <Path Width="14" Height="14" Margin="2,0,0,0" Data="{StaticResource Icons.Branch}"/>
                       
                       <TextBlock Margin="6,0,0,0"
                                  Text="{Binding Branch, Mode=OneWay}"
@@ -172,7 +172,10 @@
                     <StackPanel Grid.Row="1" Grid.Column="1"
                                 Orientation="Horizontal"
                                 Margin="8,0,0,0">
-                      <TextBlock Text="{Binding SHA, Converter={x:Static c:StringConverters.ToShortSHA}}"
+                      <Path Width="14" Height="14" Data="{StaticResource Icons.Commit}"/>
+                      
+                      <TextBlock Margin="8,0,0,0"
+                                 Text="{Binding SHA, Converter={x:Static c:StringConverters.ToShortSHA}}"
                                  VerticalAlignment="Center"/>
 
                       <Path Margin="6,0,0,0"
