--- a/src/Views/InteractiveRebase.axaml
+++ b/src/Views/InteractiveRebase.axaml
@@ -57,7 +57,7 @@
                                     Background="{DynamicResource Brush.Contents}"
                                     ItemsSource="{Binding Items}"
                                     SelectionMode="Single"
-                                    SelectedItem="{Binding SelectedItem, Mode=OneWayToSource}"
+                                    SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
                                     ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                                     ScrollViewer.VerticalScrollBarVisibility="Auto"
                                     Grid.IsSharedSizeScope="True">
